fatto header e nav

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ nav{
   top: 5%;
   left: 50%;
   transform: translate(-50%);
+  text-align: center;
 }
 .containercolumn{
   width: 1300px;
@@ -60,4 +61,45 @@ nav{
   clear: left;
   display: table;
   content: "";
+}
+
+
+
+
+/* CONTENUTO HEADER */
+#nomesito{
+  font-size: 50px;
+  color:white;
+  letter-spacing: 5px;
+  font-family: sans-serif;
+  border: 5px solid white;
+  padding: 7px;
+}
+header > #nomesito{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+header > i{
+  color: white;
+  font-size: 55px;
+  position: absolute;
+  top: 30%;
+  left:50%;
+  transform: translate(-50%,-30%);
+}
+
+/* CONTENUTO NAV */
+ul{
+  padding: 0;
+}
+ul li{
+  padding: 0 15px;
+  display: inline-block;
+  color: #af9b8b;
+  line-height: 80px;
+  font-family: sans-serif;
+  font-weight: bold;
+  border-right: 1px groove #382c22;
 }
