--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 header{
   width: 1300px;
-  height: 400px;
+  height: 300px;
   background-image: url("imgheader.jpg");
   background-size: cover;
   border: 12px solid white;
@@ -23,7 +23,7 @@ header{
 }
 nav{
   width: 1300px;
-  height: 80px;
+  height: 70px;
   background-color: rgb(79, 67, 59);
   position: relative;
   top: 5%;
@@ -45,17 +45,17 @@ nav{
 }
 .column1{
   width: 19%;
-  height: 50px;
   margin-right: 1%;
+  padding: 10px 30px;
 }
 .column2{
   width: 50%;
-  height: 50px;
+  padding: 25px;
 }
 .column3{
   width: 29%;
-  height: 50px;
-  margin-left: 1%
+  margin-left: 1%;
+  background-color: inherit;
 }
 .containercolumn:after{
   clear: left;
@@ -85,7 +85,7 @@ header > i{
   color: white;
   font-size: 55px;
   position: absolute;
-  top: 30%;
+  top: 22%;
   left:50%;
   transform: translate(-50%,-30%);
 }
@@ -98,8 +98,55 @@ ul li{
   padding: 0 15px;
   display: inline-block;
   color: #af9b8b;
-  line-height: 80px;
+  line-height: 70px;
   font-family: sans-serif;
   font-weight: bold;
   border-right: 1px groove #382c22;
+}
+ul li:last-child{
+  border-right: 0;
+}
+
+/* CONTENUTO COLONNA1 */
+.column1 i{
+  color: orange;
+  font-size: 35px;
+}
+.column1 h3, .column3 h3{
+  font-family: sans-serif;
+  font-size: 25px;
+  font-weight: bolder;
+  margin-bottom: 15px;
+  color: #382c22;
+
+}
+.column1 a, .column3 a{
+  color: green;
+  font-size: 15px;
+  margin: 10px;
+  display: block;
+}
+
+
+/* CONTENUTO COLONNA2 */
+.column2 h1{
+  font-family: sans-serif;
+  font-size: 40px;
+  margin-bottom: 35px;
+  color: #382c22;
+}
+/* CONTENUTO COLONNA3 */
+.riquadro1{
+  background-color: white;
+  margin-bottom: 35px;
+  padding: 10px;
+}
+.riquadro2{
+  background-color: white;
+  padding: 15px;
+}
+.riquadro1 p, .column2 p{
+  font-size: 16px;
+  font-family: sans-serif;
+  color: #382c22;
 }
